# skeddy-backend

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
alert-bridge/: bridge.py
alertmanager/: alertmanager.yml
app/: config.py  database.py  main.py  redis.py
app/admin/: __init__.py  auth.py  backup.py  cluster_map.py  credit_balance.py  credit_transaction.py  dashboard.py  email_template.py  purchase_order.py  push_template.py  views.py
app/dependencies/: auth.py  device_auth.py  redis.py
app/middleware/: content_type.py  csrf.py  error_handler.py  language_sync.py  logging.py  rate_limiter.py  request_id.py  security_headers.py
app/models/: __init__.py  accept_failure.py  app_config.py  credit_balance.py  credit_transaction.py  email_template.py  legacy_credit.py  paired_device.py  purchase_order.py  push_template.py  refresh_token.py  ride.py  search_filters.py  search_status.py  user.py
app/routers/: admin_backup.py  admin_config.py  auth.py  credits.py  fcm.py  filters.py  pairing.py  ping.py  profile.py  rides.py  search.py
app/schemas/: admin.py  auth.py  billing_config.py  credits.py  fcm.py  filters.py  pairing.py  ping.py  profile.py  push_templates.py  rides.py  search.py
app/services/: auth_service.py  cluster_service.py  config_service.py  credit_service.py  email_service.py  fcm_service.py  filter_service.py  google_play_service.py  legacy_credit_service.py  pairing_service.py  ping_service.py  ride_service.py  search_service.py
app/services/config_service/: __init__.py  billing.py  cache.py  clustering.py  ping.py  search.py  templates.py  verification.py
app/tasks/: balance_reconciliation.py  cluster_manager.py  data_cleanup.py  health_check.py  low_balance_reminder.py  purchase_recovery.py  ride_verification.py  token_cleanup.py
app/utils/: codes.py  pagination.py
loki/: loki-config.yml
migrations/: env.py
migrations/versions/: 135d76fc0d1d_add_expires_at_to_paired_devices.py  2e926db57b8b_initial_migration.py  304b63205f44_add_device_model_to_paired_devices.py  3f535dcf865b_add_email_verified_to_users.py  a1b2c3d4e5f6_add_user_language_and_push_templates.py  a1f3c9d72e01_add_app_configs_table.py  a3b4c5d6e7f8_seed_clustering_app_configs.py  a7b8c9d0e1f2_soft_delete_financial_records.py  b1c2d3e4f5a6_seed_welcome_email_template.py  b2c3d4e5f6a7_add_legacy_credits_table.py  b4c5d6e7f8a9_add_expires_at_to_paired_devices.py  b4c5d6e7f8a9_add_password_changed_at_to_users.py  b6dc720bf058_add_app_version_to_paired_devices.py  c3d4e5f6a7b8_add_license_number_to_users.py  c4a8e2f19b03_widen_app_config_value_add_interval.py  c8d9e0f1a2b3_merge_heads.py  d4e5f6a7b8c9_replace_license_with_legacy_user_id.py  d7f2a8b31c04_add_billing_models.py  e5b3f1a82d09_seed_billing_app_configs.py  e5f6a7b8c9d0_add_email_templates_table.py  e9f74122e224_add_expires_at_to_paired_devices.py  f1a2b3c4d5e6_rename_paired_at_to_registered_at.py  f6a7b8c9d0e1_add_location_to_paired_devices.py
nginx/: nginx.conf
nginx/html/: reset-password.html
promtail/: promtail-config.yml
scripts/: backup-postgres.sh  deploy.sh  import_legacy_credits.py  import_legacy_credits_prod.sh  init-letsencrypt.sh
tests/: conftest.py  factories.py  test_account_lockout.py  test_admin_appconfig.py  test_admin_auth.py  test_admin_backup.py  test_admin_config.py  test_admin_credit_balance.py  test_admin_credit_transaction.py  test_admin_dashboard.py  test_admin_docs.py  test_admin_email_template.py  test_admin_purchase_order.py  test_admin_push_template.py  test_admin_views.py  test_app_lifecycle.py  test_auth_change_password.py  test_auth_delete_account.py  test_auth_login_refresh.py  test_auth_logout.py  test_auth_me.py  test_auth_phone.py  test_auth_register.py  test_auth_register_verification.py  test_auth_request_reset.py  test_auth_resend_verification.py  test_auth_reset_password.py  test_auth_service.py  test_auth_verify_email.py  test_balance_reconciliation.py  test_batch_ping_configs.py  test_build_verify_rides.py  test_change_email.py  test_cluster_admin.py  test_cluster_events.py  test_cluster_manager.py  test_cluster_ping.py  test_cluster_service.py  test_concurrent_credits.py  test_config_service.py  (+60 more)
tests/billing/: conftest.py  helpers.py  test_e2e_balance_block.py  test_e2e_events_feed.py  test_e2e_purchase_flow.py  test_e2e_registration_bonus.py  test_e2e_ride_charge.py  test_e2e_verification_confirm.py  test_e2e_verification_refund.py  test_fixtures.py
tests/load/: ping_load_test.py
tests/test_migrations/: test_billing_config_migration.py  test_billing_migration.py  test_welcome_email_migration.py
tests/test_models/: test_accept_failure.py  test_credit_balance.py  test_credit_transaction.py  test_paired_device.py  test_purchase_order.py  test_refresh_token.py  test_ride.py  test_search_filters.py  test_search_status.py  test_user.py
tests/test_schemas/: test_auth.py  test_billing_config.py  test_credits.py  test_events.py  test_pairing.py  test_ping.py  test_rides.py  test_search.py
(+22 files in other folders)
